objects/Patient__c.object
<CustomObject>
    <description>contains all patient records</description>
    <fields>
        <fullName>Disease__c</fullName>
        <label>Disease</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor_id</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>patients</relationshipLabel>
        <relationshipName>patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_modified_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>patients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marital_status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marital status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN_Number__c</fullName>
        <description>SSN number of the patient</description>
        <label>SSN_Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <label>age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>created_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>created by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>patient_id__c</fullName>
        <displayFormat>P-{0000}</displayFormat>
        <label>patient_id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>website__c</fullName>
        <label>website</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>weight__c</fullName>
        <label>weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>patients</pluralLabel>
    <recordTypes>
        <fullName>accountant</fullName>
        <active>true</active>
        <label>accountant</label>
    </recordTypes>
    <recordTypes>
        <fullName>lab_team</fullName>
        <active>true</active>
        <label>lab team</label>
    </recordTypes>
    <recordTypes>
        <fullName>master</fullName>
        <active>true</active>
        <label>master</label>
    </recordTypes>
    <recordTypes>
        <fullName>patient_layout</fullName>
        <active>true</active>
        <label>patient layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   NOT(ISBLANK(  phone__c )),
   NOT(ISNUMBER(   phone__c ))
)</errorConditionFormula>
        <errorMessage>heloo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_format</fullName>
        <active>true</active>
        <description>SSN format should be following</description>
        <errorConditionFormula>and(NOT(REGEX( SSN_Number__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)), 
RecordType.DeveloperName =&apos;patient_layout&apos; )</errorConditionFormula>
        <errorDisplayField>SSN_Number__c</errorDisplayField>
        <errorMessage>SSn format should be 000-00-0000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>website_validation</fullName>
        <active>false</active>
        <description>validate last 4 and first 4 letters</description>
        <errorConditionFormula>and( RIGHT( website__c , 4) &lt;&gt; &quot;.com&quot;,
RIGHT( website__c , 4) &lt;&gt; &quot;.COM&quot;)</errorConditionFormula>
        <errorDisplayField>website__c</errorDisplayField>
        <errorMessage>Enter proper 4 charectors. eg: .com,.net ..etc</errorMessage>
    </validationRules>
</CustomObject>